syntax = "proto3";

option csharp_namespace = "Sisa.Blog.Api.V1.Categories.Queries";

package sisa.blog.api;

import "google/protobuf/wrappers.proto";

import "sisa/libs/common/params/filtering_params.proto";
import "sisa/libs/common/params/sorting_params.proto";

message GetCategoriesQuery {
  int pageIndex = 1;
  int pageSize = 2;
  sisa.protobuf.common.filtering_params filter = 3;
  sisa.protobuf.common.sorting_params sortBy = 4;
}

message FindCategoryByIdQuery {
  string id = 1;
}

